--- a/style.css
+++ b/style.css
@@ -20,108 +20,123 @@ body {
 
 ul {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(300px , 1fr));
   gap: 10px;
   margin: 10px;
+  vertical-align: middle;
 }
 
 .card {
-  width: 300px;
-  display: grid;
-  grid-template-columns: 300px;
-  grid-template-rows: 200px 180px 80px;
-  grid-template-areas: "image" "text" "stats";
-  border-radius: 18px;
-  background: white;
-  box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.9);
-  font-family: roboto;
-  text-align: center;
-  transition: 0.5s ease;
-  cursor: pointer;
-  margin: 30px;
-}
+    width: 300px;
+    display: grid;
+    grid-template-columns: 300px;
+    grid-template-rows: 210px 210px 80px 0px;
+    grid-template-areas: "image" "text" "stats" "link";
+  
+    border-radius: 18px;
+    background: white;
+    box-shadow: 5px 5px 15px rgba(0,0,0,0.9);
+    font-family: roboto;
+    text-align: center;
+    
+  
+    transition: 0.5s ease;
+    cursor: pointer;
+    margin:30px;
+  }
 
-.card-image {
-  display: flex;
-  justify-content: center;
-  border-top-left-radius: 15px;
-  border-top-right-radius: 15px;
-  image-rendering: optimizeSpeed;
-  align-items: center;
-}
+  .card-link {
+    color: inherit;
+    text-decoration: inherit;
+    text-decoration-color: transparent;
+    z-index: 1;
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-start: 1;
+    grid-row-end: 4;
+  }
 
-.card-image img {
-  width: 180px;
-  height: 180px;
-}
+  .card-image {
 
-.card-text {
-  grid-area: text;
-  margin-top: 30px;
-  margin-bottom: 25px;
-  margin-left: 25px;
-  margin-right: 25px;
-}
 
-.card-text .date {
-  color: #e41021;
-  font-size: 13px;
-}
+    grid-area: image;
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
+    display: flex;
+    justify-content: center;
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
+    image-rendering: optimizeSpeed;
+    align-items: center;
 
-.card-text p {
-  color: grey;
-  font-size: 15px;
-  font-weight: 300;
-}
+    /*
+    grid-row-start: 1;
+    grid-row-end: 1;  
+    display: flex;
+    justify-content: center;
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
+    image-rendering: optimizeSpeed;
+    align-items: center;*/
+  }
 
-.card-text h2 {
-  margin-top: 0px;
-  font-size: 28px;
-}
+  .card-image img {
+    width: 180px;
+    height: 180px;
+  }
+  
+  .card-text {
+    grid-area: text;
+    margin-top: 30px;
+    margin-bottom: 25px;
+    margin-left: 25px;
+    margin-right: 25px;
+    
+  }
+    .card-text .date {
+      color: #e41021;
+      font-size:13px;
+    }
+    .card-text p {
+      color: grey;
+      font-size:15px;
+      font-weight: 300;
+    }
+    .card-text h2 {
+      margin-top:0px;
+      font-size:28px;
+    }
 
-.card-stats {
-  grid-area: stats;
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 1fr;
-  border-bottom-left-radius: 15px;
-  border-bottom-right-radius: 15px;
-  background: #e41021;
-}
-
-.card-stats .stat {
-  padding: 10px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  color: white;
-}
-
-.card-stats .border {
-  border-left: 1px solid #63070F;
-  border-right: 1px solid #63070F;
-}
-
-.card-stats .status-sep {
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 18;
-  font-weight: 500;
-}
-
-.card-stats .status {
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 18;
-  font-weight: 500;
-}
-
-.card-stats .status {
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 18;
-  font-weight: 500;
-}
-
-.card:hover {
-  transform: scale(1.05);
-  box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.6);
-}
+  .card-stats {
+    grid-area: stats;
+    height: 80px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr;
+    border-bottom-left-radius: 15px;
+    border-bottom-right-radius: 15px;
+    background: #e41021;
+  }
+  .card-stats .stat {
+    padding:10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    color: white;
+  }
+  .card-stats .border {
+    border-left: 1px solid #63070F;
+    border-right: 1px solid #63070F;
+  }
+  .card-stats .status{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 18;
+    font-weight: 500;
+  }
+  
+  
+  .card:hover {
+    transform: scale(1.05);
+    box-shadow: 5px 5px 15px rgba(0,0,0,0.6);
+  }
